--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -35,14 +35,14 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_marginBottom="52dp"
-            android:hint="Username" />
+            android:hint="@string/username_hint" />
         <EditText
             android:id="@+id/emailET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_marginBottom="52dp"
-            android:hint="Email" />
+            android:hint="@string/email_hint" />
 
         <EditText
             android:id="@+id/passwordET"
@@ -51,7 +51,7 @@
             android:layout_margin="8dp"
             android:layout_marginBottom="52dp"
             android:password="true"
-            android:hint="Password" />
+            android:hint="@string/password_hint" />
 
         <EditText
             android:id="@+id/confirmET"
@@ -60,7 +60,7 @@
             android:layout_margin="8dp"
             android:layout_marginBottom="104dp"
             android:password="true"
-            android:hint="Confirm Password" />
+            android:hint="@string/confPassword_hint" />
 
         <Button
             android:id="@+id/signUpBt"
@@ -68,6 +68,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_marginBottom="68dp"
-            android:text="Sign Up" />
+            android:text="@string/signupBtn" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
