--- a/app/src/main/res/layout/tasks_row.xml
+++ b/app/src/main/res/layout/tasks_row.xml
@@ -1,98 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:id="@+id/rootLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:padding="15dp"
-        android:weightSum="8"
-        android:background="@color/purple_200"
+        android:layout_margin="20dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="15dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:id="@+id/detailsLay"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="6"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/taskTitleTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Feed the cat"
-                android:textStyle="bold"
-                android:textSize="25sp" />
-            <TextView
-                android:id="@+id/taskDetailTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Use the new food \nDon't forget to clean the bowl after"
-                android:textSize="20sp" />
-        </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/timerTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="00:01:15"
-                android:textStyle="bold"
-                android:textSize="22sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/btnLay"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@drawable/layout_style"
+            >
 
-            <ImageView
-                android:id="@+id/timerBtn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:onClick="onClick"
-                app:srcCompat="@drawable/started_icon" />
+            <LinearLayout
+                android:id="@+id/detailsLay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/resetBtn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="10dp"
-                android:onClick="onClick"
-                app:srcCompat="@drawable/restart_icon"
-                />
-            <ImageView
-                android:id="@+id/deleteBtn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="10dp"
-                android:onClick="onClick"
-                app:srcCompat="@drawable/cancel_icon"
-                />
+                <ImageView
+                    android:id="@+id/deleteBtn"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:onClick="onClick"
+                    android:padding="5dp"
+                    android:layout_gravity="end"
+                    app:srcCompat="@drawable/cancel_24" />
+
+                <TextView
+                    android:id="@+id/taskTitleTv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/co4"
+                    android:text="Feed the cat"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/notesTv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/co4"
+                    android:text="Use the new food \nDon't forget to clean the bowl after"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="16dp" />
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                android:id="@+id/btnLay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingHorizontal="55dp"
+                android:paddingVertical="5dp"
+                android:weightSum="3">
+
+                <ImageView
+                    android:id="@+id/resetBtn"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:onClick="onClick"
+                    app:srcCompat="@drawable/restart_24" />
+
+                <TextView
+                    android:id="@+id/timerTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/frame_style"
+                    android:gravity="center"
+                    android:text="00:01:15"
+                    android:layout_weight="1"
+                    android:textColor="@color/purple_500"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/timerBtn"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:onClick="onClick"
+                    app:srcCompat="@drawable/started_24" />
+
+            </LinearLayout>
         </LinearLayout>
-
-    </LinearLayout>
-
+    </androidx.cardview.widget.CardView>
 
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
