--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#C6C6C6</color>
+    <color name="darkGray">#717171</color>
     <color name="co">#F1C6A4</color>
     <color name="co1">#FFBB86</color>
     <color name="co2">#C68049</color>
@@ -15,7 +16,7 @@
     <color name="co4">#BEA2C4</color>
     <color name="co5">#545060</color>
     <color name="co6">#9A89CE</color>
-    <color name="co7">#D1CED6</color>
-    <color name="co8">#7249BC</color>
+    <color name="co7">#695D8B</color>
+    <color name="co8">#CBC5DB</color>
 
 </resources>
